# py_config

./: README.md  pyproject.toml
src/yaml_json_config_paco/: GenericItem.py  Properties.py
src/yaml_json_config_paco.li/: OrderedDictJsonYaml.py  OrderedDictYaml.py
tests/: sample.json  sample.yml  test.py  test.yml
